--- a/app/views/contracts/indexbroni.html.erb
+++ b/app/views/contracts/indexbroni.html.erb
@@ -29,13 +29,14 @@
 			<tr  class="info">
 			   <th>..........</th>	
 			   <th>№</th>
-			   <th>От</th>
+		<!--   <th>От</th>  -->
 			   <th>Aгент</th>
 			   <th>Автомобиль</th>
 			   <th>Период</th>
 			   <th>Гар. сумма</th>
 			   <th>Цена в день, <% if $valuta.upcase=='EUR' then %>&euro;<% else %><%= "#{$valuta}" %><% end %></th>
-			   <th>Клиент</th>			   
+			   <th>Клиент</th>
+			   <th>Место</th>			   
 			</tr>	
 		</thead>
 		<tbody>
@@ -46,8 +47,8 @@
 							<%= link_to " " , contracts_edit_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-pencil", :title => 'Редактировать бронь' %>
 							<%= link_to " " , contracts_destroy_path(:id => c.id),:method => :get, :class=> "glyphicon glyphicon-remove", :title => 'Удалить бронь', data: { confirm: "Удалить контракт #{c.id}/#{c.cnum} от #{c.order_date.strftime('%d.%m.%Y')}?" } %>
 						</td>
-						<td><%= "#{c.id}/#{c.cnum}" %></td>
-						<td><%= c.order_date.strftime('%Y.%m.%d') %></td>
+						<td><%= "#{c.id}" + if c.cnum!='' then "/#{c.cnum} " else " " end %></td>
+				<!--	<td><%= c.order_date.strftime('%Y.%m.%d') %></td> -->
 						<td><%= unless c.user.nil? then c.user.username end %></td>
 						<td><%= unless c.car.nil? then "#{c.car.marca} #{c.car.gnum}" end %></td>
 						<td><%= "#{c.stdate.strftime('%d.%m.%Y_%R')}" %></br><%= "#{c.enddate.strftime('%d.%m.%Y_%R')}" %></br>
@@ -55,7 +56,8 @@
 						        	  (case c.dperiod when 1 then "день" when 2 then "дня" when 3 then "дня" when 4 then "дня" else "дней" end) end %></td>
 						<td><%= c.garant_summ %></td>
 						<td><%= number_to_currency(c.price,:unit=>'€', precision: 0) %></td>
-						<td><small><%= unless c.client.nil? then "#{c.client.id} #{c.client.sname} #{c.client.name} #{c.client.fname}" end %></small></td>					
+						<td><%= unless c.client.nil? then "#{c.client.id} #{c.client.sname} #{c.client.name} #{c.client.fname} #{c.client.tel} #{c.client.pemail}" end %></td>
+						<td><%= case c.place when 0 then 'Аэропорт' when 1 then 'Офис' else '' end %></td>					
 					</tr>		
 			<% end %>			
 		</tbody>
