--- a/app/views/contracts/_clients.html.erb
+++ b/app/views/contracts/_clients.html.erb
@@ -6,26 +6,32 @@
 	  <thead>
 	    <tr>
 	      <th>№</th>
-	      <th>ФИО</th>
-	      <th>Паспорт</th>      
-	      <th>Дата рождения</th>
-	      <th>IDNP</th>
-		  <th>Страна</th> 
+		  <th>ФИО</th>
+		  <th>Паспорт</th>
+		  <th>Дата рождения</th>
+		  <th>IDNP</th>
+		  <th>Страна</th>			   
+		  <th>Адрес</th>
+		  <th>E-mail Телефон</th>
 	    </tr>
 	  </thead>
 	  <tbody>
 	  	<% clients = Client.all %>
 	  	<% clients.each do |clitem| %>
 		  	<tr>
-		  	<td title='Выбрать клиента'><button type="button" class="btn btn-info  btn-xs" onclick="myFunction(<%= clitem.id %>,'<%= clitem.sname%> <%= clitem.name%> <%= clitem.bdate%>')" >
-		  		<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
-                </button>
-		  	</td>
-		  	<td><%= clitem.sname%> <%= clitem.name%> <%= clitem.fname%></td>
-		  	<td><%= clitem.pseria %> <%= clitem.dn %></td>
-		  	<td><%= clitem.bdate%></td>
-		  	<td><%= clitem.idno %></td>
-			<td><%= clitem.de %></td>
+			  	<td title='Выбрать клиента'><button type="button" class="btn btn-info  btn-xs" onclick="myFunction(<%= clitem.id %>,
+			  		     '<%= clitem.sname %> <%= clitem.name %>  <%= clitem.fname %> <%= clitem.tel %>', 
+			  		     'Паспорт: <%= clitem.pseria %> <%= clitem.dn %>. Дата рождения: <%= clitem.bdate%>. IDNP: <%= clitem.idno %>. Страна: <%= clitem.de %>. Адрес: <%= clitem.address %>. Email: <%= clitem.pemail %>.')" >
+			  		<span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+	                </button>
+			  	</td>
+			  	<td><%= clitem.sname%> <%= clitem.name%> <%= clitem.fname%></td>
+			  	<td><%= clitem.pseria %> <%= clitem.dn %></td>
+			  	<td><%= clitem.bdate%></td>
+			  	<td><%= clitem.idno %></td>
+				<td><%= clitem.de %></td>
+				<td><%= clitem.address %></td>
+				<td><%= clitem.pemail %> <%= clitem.tel %></td>				
 		  	</tr> 	
 	  	<% end %>  
 	  </tbody>
